force-app/main/default/objects/Project_Email__c/Project_Email__c.object-meta.xml
<CustomObject>
    <description>Emails related to the project record</description>
    <label>Project Email</label>
    <nameField>
        <displayFormat>PE-{000000}</displayFormat>
        <label>Project Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>