force-app/main/default/objects/Project_Email__c/fields/Email_Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Thread_Id__c</fullName>
    <label>Email Thread Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>