force-app/main/default/objects/Project_Email__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Email Body</description>
    <label>Message</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>