force-app/main/default/objects/Project_Email__c/fields/of_Attachments__c.field-meta.xml
<CustomField>
    <fullName>of_Attachments__c</fullName>
    <description>Count of attachments for the email</description>
    <label># of Attachments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>