force-app/main/default/objects/Project_Email__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the project</description>
    <label>Project</label>
    <referenceTo>strk__Project__c</referenceTo>
    <relationshipLabel>Emails</relationshipLabel>
    <relationshipName>Project_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>