force-app/main/default/objects/Project_Email__c/fields/Project_Email_Thread__c.field-meta.xml
<CustomField>
    <fullName>Project_Email_Thread__c</fullName>
    <description>Link to the Email thread that the Email belongs to</description>
    <label>Project Email Thread</label>
    <referenceTo>Project_Email_Thread__c</referenceTo>
    <relationshipLabel>Project Emails</relationshipLabel>
    <relationshipName>Project_Emails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>