force-app/main/default/objects/Project_Email__c/fields/Recipients__c.field-meta.xml
<CustomField>
    <fullName>Recipients__c</fullName>
    <description>List of Recipient Email Addresses semicolon Separated</description>
    <label>Recipients</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>