force-app/main/default/objects/Project_Email__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <description>From Address</description>
    <label>Sender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>